@@ -1,3 +1,9 @@
+2004-04-20: Added 'val-or-initialize' and its notational variant,
+            'memoize-val', to misc.  Tightened definitions of 'alref' and
+	    'alref.' .
+	
+2004-03-14: Added debug.lisp
+	
 2004-03-09: Changes for portability.
 	
 2003-12-17: (branch ytools-1-2-dev) Rejiggered logic to checking
